--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,10 @@
-pandoc: '3.2'
-pkgdown: 2.1.1
+pandoc: 3.1.7
+pkgdown: 2.1.0
 pkgdown_sha: ~
 articles:
   Introduction: Introduction.html
   TockyLocusAnalysis: TockyLocusAnalysis.html
-last_built: 2024-11-14T17:42Z
+last_built: 2024-11-15T07:00Z
+urls:
+  reference: https://MonoTockyLab.github.io/TockyLocus/reference
+  article: https://MonoTockyLab.github.io/TockyLocus/articles
