--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,10 +1,10 @@
-pandoc: 3.1.7
-pkgdown: 2.1.0
+pandoc: '3.2'
+pkgdown: 2.1.1
 pkgdown_sha: ~
 articles:
   Introduction: Introduction.html
   TockyLocusAnalysis: TockyLocusAnalysis.html
-last_built: 2024-11-15T23:48Z
+last_built: 2024-11-16T16:08Z
 urls:
   reference: https://MonoTockyLab.github.io/TockyLocus/reference
   article: https://MonoTockyLab.github.io/TockyLocus/articles
