--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,10 +1,10 @@
-pandoc: '3.5'
-pkgdown: 2.1.1
+pandoc: 3.1.7
+pkgdown: 2.1.0
 pkgdown_sha: ~
 articles:
   Introduction: Introduction.html
   TockyLocusAnalysis: TockyLocusAnalysis.html
-last_built: 2024-11-17T19:45Z
+last_built: 2024-11-27T21:47Z
 urls:
   reference: https://MonoTockyLab.github.io/TockyLocus/reference
   article: https://MonoTockyLab.github.io/TockyLocus/articles
